--- a/index.html
+++ b/index.html
@@ -6,54 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<title>Inline reader</title>
-	<style>
-	html, body {
-		margin: 0;
-		padding: 0;
-		height: 100%;
-	}
-	#lipsum {
-		position: absolute;
-		top: 20px;
-		bottom: 40px;
-		left: 20px;
-		right: 20px;
-		background: #eee;
-		overflow: hidden;
-	}
-	#lipsum h1,
-	#lipsum h2,
-	#lipsum h3,
-	#lipsum h4,
-	#lipsum p {
-		margin: 1em 0;
-	}
-	#lipsum > :first-child,
-	#lipsum .readre-anti-orphan > :first-child {
-		margin-top: 0;
-	}
-	#pager {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		line-height: 40px;
-		text-align: center;
-	}
-	#pager a {
-		text-decoration: none;
-	}
-	#pager > * + *:before {
-		content: " | ";
-	}
-
-	.readre-anti-orphan {
-		background: lightblue;
-	}
-	.readre-reference-child {
-		background: red;
-	}
-	</style>
+	<link rel="stylesheet" href="readre.css" />
 </head>
 
 <body>
@@ -97,233 +50,11 @@
 	<a href="#" onclick="return readre.showPage(Math.min(readre.pages.length-1, readre.page+1))">Next</a>
 </div>
 
+<script src="readre.js"></script>
 <script>
-var el = document.getElementById('lipsum');
-var readre = (function(el) {
+var readre = Readre(document.getElementById('lipsum')); // .reinit();
 
-	// Environment
-	var contentHeight, contentWidth,
-		containerHeight, containerWidth,
-		children, Lc,
-		buffer, pages,
-		page, position, referenceChild, topChildNo,
-		events,
-		R;
-
-	// Process
-	var i, L, Hs, P, Hns, nextEl, div, nextNextEl, Hel;
-
-	// Let's fire her up
-	pages = [];
-	events = {};
-
-	init();
-//	reinit();
-
-	// Do this once
-	function init() {
-		buffer = document.createElement('div');
-
-		// This is expensive...
-		// @TODO -- Add 500ms (?) timer to trigger if resized?
-		window.addEventListener('resize', function(e) {
-			reflow();
-		});
-	}
-
-	// Do this when the content changes
-	function reinit() {
-		// Remove white-space
-		for ( i=0, C=el.childNodes, L=C.length; i<L; i++ ) {
-			if ( C[i].nodeType != Node.ELEMENT_NODE ) {
-				el.removeChild(C[i]);
-				i--;
-				L--;
-			}
-		}
-
-		// Combine Hn + * so that Hn's are never orphaned
-		// @TODO -- THIS IS A HACK and should be improved, preferably by
-		// something shadow-dom or other unobtrusive tek
-		Hns = el.querySelectorAll('h1, h2, h3, h4, h5, h6');
-		for ( i=0, L=Hns.length; i<L; i++ ) {
-			Hel = Hns[i]
-			nextEl = Hel.nextSibling;
-
-			if ( !/^H\d$/.test(nextEl.nodeName) ) {
-				nextNextEl = nextEl.nextSibling;
-
-				div = document.createElement('div');
-				div.classList.add('readre-anti-orphan');
-				div.appendChild(Hel);
-				div.appendChild(nextEl);
-
-				// Reappend to el
-				if ( nextNextEl ) {
-					el.insertBefore(div, nextNextEl);
-				}
-				else {
-					el.appendChild(div);
-				}
-			}
-		}
-
-		// The list of children won't change
-		children = [].slice.call(el.childNodes);
-		Lc = children.length;
-
-		// Calculate pages
-		reflow();
-
-		return R;
-	}
-
-	// Do this when the boundaries change (content, screen size, font size etc)
-	function reflow() {
-		containerHeight = el.offsetHeight;
-		containerWidth = el.offsetWidth;
-
-		contentHeight = el.scrollHeight;
-		contentWidth = el.scrollWidth;
-
-		// Save elements to buffer
-		for ( i=0; i<Lc; i++ ) {
-			moveToBuffer(children[i]);
-		}
-
-		pages.length = 0;
-		pages.push([]);
-
-		// Calculate pages
-		for ( p = 0, i=0; i<Lc; i++ ) {
-			moveToEl(children[i], true);
-			pages[p].push(i);
-
-			Hs = el.scrollHeight;
-
-			if ( Hs > containerHeight ) {
-				// Move last element back to buffer
-				moveToBuffer(el.lastChild);
-				pages[p].pop();
-
-				// Next page
-				i--;
-				p++;
-				pages.push([]);
-
-				// Clear el
-				moveElToBuffer();
-			}
-		}
-
-//debugPages();
-
-		fireEvent('reflow');
-
-		// Open page
-//		showPage(position ? Math.floor(position * pages.length) : 0, true);
-		showPage(topChildNo ? pageByChildNo(topChildNo) : 0, true);
-
-		// Hilite reference child?
-		if ( topChildNo ) {
-			children[topChildNo].classList.add('readre-reference-child');
-		}
-	}
-
-	function pageByChildNo(no) {
-		for ( i=0, L=pages.length; i<L; i++ ) {
-			if ( -1 != pages[i].indexOf(no) ) {
-				return i;
-			}
-		}
-	}
-
-	function showPage(n, internal) {
-		// Clear el
-		moveElToBuffer();
-
-		isNaN(n) && (n = 0);
-		n = Math.max(0, Math.min(pages.length-1, n));
-
-		for ( i=0, P = pages[n], L=P.length; i<L; i++ ) {
-			el.appendChild(children[P[i]]);
-		}
-
-		R.page = page = n;
-		fireEvent('page');
-
-		if ( !internal ) {
-			position = (page / pages.length) || 0;
-			topChildNo = P[0];
-
-			// Remove reference hilite
-			if ( referenceChild = el.querySelector('.readre-reference-child') ) {
-				referenceChild.classList.remove('readre-reference-child');
-				topChildNo = null;
-			}
-		}
-
-		return false;
-	}
-
-	function moveToEl(child, bottom) {
-		if ( bottom || !el.firstChild ) {
-			el.appendChild(child);
-		}
-		else {
-			el.insertBefore(child, el.firstChild);
-		}
-	}
-
-	function moveElToBuffer() {
-		while ( el.firstChild ) {
-			moveToBuffer(el.firstChild);
-		}
-	}
-
-	function moveToBuffer(child) {
-		buffer.appendChild(child);
-	}
-
-	function debugPages() {
-		var d = [], d2 = [];
-		for ( var i=0, L=pages.length; i<L; i++ ) {
-			d2 = [];
-			for ( var j=0, M=pages[i].length; j<M; j++ ) {
-				d2.push(children[pages[i][j]].textContent.split(' ')[0])
-			}
-			d.push(d2.join(', '))
-		}
-		console.log('Pages: [' + d.join('] [') + ']');
-	}
-
-	// Events
-
-	function addEvent(type, callback) {
-		events[type] || (events[type] = []);
-		events[type].push(callback);
-
-		return R;
-	}
-
-	function fireEvent(type) {
-		if ( events[type] ) {
-			for ( E=events[type], i=0, L=E.length; i<L; i++ ) {
-				E[i].call(R);
-			}
-		}
-	}
-
-	return R = {
-		reinit: reinit,
-		pages: pages,
-		addEvent: addEvent,
-		showPage: showPage,
-		page: page
-	};
-
-})(el);
-
+/**/
 readre
 	.addEvent('reflow', function() {
 		console.log('reflow', this);
@@ -333,7 +64,9 @@ readre
 		console.log('page', this);
 		document.getElementById('page-n').textContent = this.page + 1;
 	})
-	.reinit();
+	.reinit()
+;
+/**/
 </script>
 
 </body>
